@@ -264,4 +264,23 @@ let () = test "TagsInNonHygienic"
   ~matching:[M.f "main.byte"]
   ~targets:("main.byte",[]) ();;
 
+let () = test "TagsNewlines"
+  ~description:"Regression test for PR#6087 about placement \
+                of newline-escaping backslashes"
+  ~options:[`no_ocamlfind]
+  ~tree:[
+    T.f "main.ml" ~content:"";
+    T.f "_tags" ~content:
+"<foo>: debug,\\
+rectypes
+<bar>: \\
+debug, rectypes
+<baz>\\
+: debug, rectypes
+";
+  ]
+  ~matching:[M.f "main.byte"]
+  ~targets:("main.byte",[]) ();;
+
+
 run ~root:"_test_internal";;
